# Chatbot_RAG

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
chatbot/: main.py
chatbot/database/: db_conn.py  load_docs.py  vector_db.py
